--- a/head.html
+++ b/head.html
@@ -2,3 +2,6 @@
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
+<meta name="urn:adobe:aue:config:preview" content="main--idfc-edge--aemsites.aem.page"/>
+<meta name="urn:adobe:aue:config:disable" content="aem-dev-login" />
+<meta name="urn:adobe:aue:config:disable" content="publish-live" />
