--- a/test-buttons.html
+++ b/test-buttons.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Button Test</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css?v=4">
   <style>
     body {
       font-family: 'Inter', sans-serif;
