Update stylesheet version in test-buttons.html and change secondary button arrow icon from white to red for improved visibility.

--- a/test-buttons.html
+++ b/test-buttons.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Button Test</title>
-  <link rel="stylesheet" href="styles/styles.css?v=8">
+  <link rel="stylesheet" href="styles/styles.css?v=9">
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -67,10 +67,10 @@
     <p style="color: white;"><strong>Secondary Button:</strong></p>
     <a href="#" class="button secondary">View awards</a>
     
-    <p style="color: white;"><strong>Secondary Button (with white arrow):</strong></p>
+    <p style="color: white;"><strong>Secondary Button (with arrow):</strong></p>
     <a href="#" class="button secondary">
       View awards
-      <span class="icon icon-arrow-right-white"><img src="icons/arrow-right-white.svg" alt=""></span>
+      <span class="icon icon-arrow-right-red"><img src="icons/arrow-right-red.svg" alt=""></span>
     </a>
   </div>
 
