Update icon path in sidekick library configuration

--- a/tools/sidekick/library.html
+++ b/tools/sidekick/library.html
@@ -36,7 +36,7 @@
   // Configure library
   library.config = {
     base: '/blocks.json',
-    icons: '/tools/sidekick/plugins/icons/icons.js',
+    icons: '/tools/plugins/icons.js',
   }
   
   document.body.prepend(library)
