Update base path for library configuration in sidekick

--- a/tools/sidekick/library.html
+++ b/tools/sidekick/library.html
@@ -35,7 +35,7 @@
   
   // Configure library
   library.config = {
-    base: '/blocks.json',
+    base: '/library/blocks.json',
     icons: '/tools/plugins/icons.js',
   }
   
